Fix .gitignore entries for cache directories to ensure proper exclusion

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 __pycache__/
 venv/
 *.pyc
-utils/__pycache__
-data/__pycache__
-components/__pycache__
-auth/__pycache__
+utils/__pycache__/
+data/__pycache__/
+components/__pycache__/
+auth/__pycache__/
 components/__init__.py
