Виправлення проблем з systemd сервісом

--- a/deployment/vacation-dashboard.service
+++ b/deployment/vacation-dashboard.service
@@ -7,20 +7,25 @@ Type=exec
 User=vacation-dashboard
 Group=vacation-dashboard
 WorkingDirectory=/opt/vacation-dashboard
-Environment=PATH=/opt/vacation-dashboard/venv/bin
+Environment=PATH=/opt/vacation-dashboard/venv/bin:/usr/local/bin:/usr/bin:/bin
 Environment=FLASK_ENV=production
-EnvironmentFile=/etc/vacation-dashboard/.env
-ExecStart=/opt/vacation-dashboard/venv/bin/gunicorn --bind 127.0.0.1:8050 --workers 4 --timeout 120 --access-logfile /var/log/vacation-dashboard/access.log --error-logfile /var/log/vacation-dashboard/error.log app:server
+Environment=PYTHONPATH=/opt/vacation-dashboard
+EnvironmentFile=-/etc/vacation-dashboard/.env
+ExecStartPre=/bin/mkdir -p /var/run/vacation-dashboard
+ExecStartPre=/bin/chown vacation-dashboard:vacation-dashboard /var/run/vacation-dashboard
+ExecStart=/opt/vacation-dashboard/venv/bin/python app.py
 ExecReload=/bin/kill -s HUP $MAINPID
 Restart=always
 RestartSec=10
+StandardOutput=journal
+StandardError=journal
 
 # Безпека
 NoNewPrivileges=true
 PrivateTmp=true
 ProtectSystem=strict
 ProtectHome=true
-ReadWritePaths=/var/lib/vacation-dashboard /var/log/vacation-dashboard /var/run/vacation-dashboard
+ReadWritePaths=/var/lib/vacation-dashboard /var/log/vacation-dashboard /var/run/vacation-dashboard /tmp
 
 [Install]
 WantedBy=multi-user.target
